[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["idlewith <newellzhou@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"
mkdocs-material-extensions = "^1.0.3"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-windmill = "^1.0.5"
pymdown-extensions = "^9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
